--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>THALAPATHY BOOK</title>
+  </head>
 
-    <!-- Meta Pixel Code -->
+  <body>
+    <!-- Facebook Pixel Scripts -->
     <script>
       !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -16,21 +18,23 @@
       t.src=v;s=b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t,s)}(window, document,'script',
       'https://connect.facebook.net/en_US/fbevents.js');
+
       fbq('init', '690957240120592');
       fbq('track', 'PageView');
+
+      fbq('init', '524451657154913');
+      fbq('track', 'PageView');
     </script>
-    <!-- End Meta Pixel Code -->
-  </head>
-  
-  <body>
-    <!-- Move <noscript> here -->
+
+    <!-- Noscript fallback -->
     <noscript>
       <img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=690957240120592&ev=PageView&noscript=1" />
+      <img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=524451657154913&ev=PageView&noscript=1" />
     </noscript>
 
     <div id="root"></div>
-
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
